--- a/day16/frontend/src/app/app.component.html
+++ b/day16/frontend/src/app/app.component.html
@@ -3,13 +3,11 @@
 <table>
   <tr>
     <td style="width: 30vw;">
-      <app-item-list [content]="cartContent" (onItemSelect)="itemSelected($event)"></app-item-list>
-    </td>
-    <td style="width: 30vw;">
-      <app-item-list [content]="cartContent" (onItemSelect)="itemSelected($event)"></app-item-list>
+      <app-item-list [content]="cartContent" (onItemSelect)="itemSelected($event)">
+      </app-item-list>
     </td>
     <td>
-      <app-item-detail></app-item-detail>
+      <app-item-detail [cartItem]="cartItem" (onUpdate)="updateCart($event)"></app-item-detail>
     </td>
   </tr>
 </table>
