--- a/day17/todo/src/app/components/create.component.html
+++ b/day17/todo/src/app/components/create.component.html
@@ -1,9 +1,15 @@
 <h2>New TODO</h2>
 
-<app-todo></app-todo>
+<!-- template reference -->
+<app-todo #myTodo></app-todo>
+
+<hr>
 
 <div>
   <button type="button" [routerLink]="['/']">
     Back
+  </button>
+  <button type="button" (click)="addTodo()">
+    Add Todo
   </button>
 </div>
