day18 lottie animation

--- a/day17/todo/src/app/components/main.component.html
+++ b/day17/todo/src/app/components/main.component.html
@@ -3,3 +3,11 @@
   CREATE
 </button>
 </div>
+
+<hr>
+
+<div *ngFor="let t of todos">
+  <h4 [routerLink]="['/todo', t.id ]">
+    {{ t.title }}
+  </h4>
+</div>
