--- a/my-anime/src/app/components/search-list.component.html
+++ b/my-anime/src/app/components/search-list.component.html
@@ -1,1 +1,16 @@
-<p>search-list works!</p>
+<div class="row mt-3">
+  <div class="col d-flex justify-content-between align-items-center">
+    <h5>My Searches</h5>
+    <button type="button" class="btn btn-info btn-sm" [routerLink]="['/search']">
+      Search
+    </button>
+  </div>
+</div>
+
+<ul class="list-group mt-3">
+  <li class="list-group-item">Cras justo odio</li>
+  <li class="list-group-item">Dapibus ac facilisis in</li>
+  <li class="list-group-item">Morbi leo risus</li>
+  <li class="list-group-item">Porta ac consectetur ac</li>
+  <li class="list-group-item">Vestibulum at eros</li>
+</ul>
