--- a/my-anime/src/app/components/search.component.html
+++ b/my-anime/src/app/components/search.component.html
@@ -1,1 +1,35 @@
-<p>search works!</p>
+<div class="row mt-3 mb-3">
+  <div class="col d-flex justify-content-end align-items-center">
+    <button type="button" class="btn btn-warning btn-sm" [routerLink]="['/search-list']">
+      Back
+    </button>
+  </div>
+</div>
+
+<form [formGroup]="form">
+  <div class="form-group">
+    <label for="search">Search Text ({{ genre }})</label>
+    <input type="text" placeholder="Enter the name to search" class="form-control" formControlName="q">
+  </div>
+  <div class="btn-group btn-block" role="group">
+    <button type="button" class="btn btn-primary" (click)="setGenre('anime')">
+      Anime
+    </button>
+    <button type="button" class="btn btn-danger" (click)="setGenre('manga')">
+      Manga
+    </button>
+  </div>
+
+  <div class="row mt-2">
+    <div class="col d-flex justify-content-end align-items-center">
+      <button type="button" class='btn btn-light' [disabled]="form.invalid">
+        Save
+      </button>
+      <button type="button" class='ml-1 btn btn-dark' [disabled]="form.invalid">
+        Search
+      </button>
+    </div>
+  </div>
+
+</form>
+
