--- a/my-anime/src/app/components/results.component.html
+++ b/my-anime/src/app/components/results.component.html
@@ -1,1 +1,13 @@
-<p>results works!</p>
+<div class="row mt-3 mb-3">
+  <div class="col d-flex justify-content-end align-items-center">
+    <button type="button" class="btn btn-warning btn-sm" [routerLink]="['/search-list']">
+      Back
+    </button>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <h4><code>{{ q }}</code> / {{ genre }}</h4>
+  </div>
+</div>
