--- a/my-anime/src/app/components/search-list.component.html
+++ b/my-anime/src/app/components/search-list.component.html
@@ -7,10 +7,10 @@
   </div>
 </div>
 
-<ul class="list-group mt-3">
-  <li class="list-group-item">Cras justo odio</li>
-  <li class="list-group-item">Dapibus ac facilisis in</li>
-  <li class="list-group-item">Morbi leo risus</li>
-  <li class="list-group-item">Porta ac consectetur ac</li>
-  <li class="list-group-item">Vestibulum at eros</li>
-</ul>
+<div class="list-group mt-3">
+  <a *ngFor="let s of searches"
+    [routerLink]="['/search', s.genre, s.q ]"
+    class="list-group-item list-group-item-action">
+    {{ s.q }} ({{ s.genre }})
+  </a>
+</div>
