--- a/my-anime/src/app/components/results.component.html
+++ b/my-anime/src/app/components/results.component.html
@@ -8,6 +8,24 @@
 
 <div class="row">
   <div class="col">
-    <h4><code>{{ q }}</code> / {{ genre }}</h4>
+    <h4>{{ genre }} / <code>{{ q }}</code></h4>
+  </div>
+</div>
+
+<div class="row" *ngFor="let sr of searchResults; let i = idx">
+  <div class="col mb-2" style="border-bottom: 1px grey solid;">
+    <img [src]="sr.image" class="img-fluid rounded">
+    <div class="caption">
+      {{ sr.title }}
+    </div>
+    <p>
+      {{ sr.synopsis }}
+    </p>
+    <div class="d-flex justify-content-end mb-1" *ngIf="canShare">
+      <button type="button" class="btn btn-outline-dark btn-sm"
+          (click)="shareThis(i)">
+        🔗
+      </button>
+    </div>
   </div>
 </div>
