--- a/my-anime/src/app/components/results.component.html
+++ b/my-anime/src/app/components/results.component.html
@@ -12,7 +12,7 @@
   </div>
 </div>
 
-<div class="row" *ngFor="let sr of searchResults; let i = idx">
+<div class="row" *ngFor="let sr of searchResults; let i = index">
   <div class="col mb-2" style="border-bottom: 1px grey solid;">
     <img [src]="sr.image" class="img-fluid rounded">
     <div class="caption">
