ADDED: country name to news

--- a/csf-assessment/src/app/components/top-headlines.component.html
+++ b/csf-assessment/src/app/components/top-headlines.component.html
@@ -1,6 +1,6 @@
 <div class="row mb-2">
 	<div class="col d-flex justify-content-between align-items-center">
-		<h2><code>Top Headlines</code></h2>
+		<h2><code>Top Headlines</code> News from {{ country }}</h2>
 		<button class="btn btn-warning btn-sm" type="button" (click)="navigateToCountryList()">
 			Back
 		</button>
